# CarSafe

./: .gitignore  Dockerfile.api  Dockerfile.dashboard  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  setup.ps1  setup_project.py
.github/workflows/: ci.yml
dashboard/: app.py
src/: __init__.py
src/anomaly_detection/: detector.py
src/api/: main.py
src/data_generator/: can_bus_simulator.py  main.py
src/data_generator/data_generator/: main.py
src/data_generator/kafka_client/: consumer.py  producer.py
src/database/: setup.py
src/kafka_client/: __init__.py  consumer.py  producer.py
tests/: test_basic.py  test_carsafe.py
